# autoware.APS.mini

./: .gitignore  README.md
src/core/autoware_core/localization/autoware_core_localization/launch/: autoware_core_localization.launch.xml
src/core/autoware_core/localization/autoware_gyro_odometer/launch/: gyro_odometer.launch.xml
src/core/autoware_core/sensing/autoware_core_sensing/launch/: autoware_core_sensing.launch.xml
src/launcher/autoware_launch_APS/autoware_launch/config/control/trajectory_follower/longitudinal/: pid.param.yaml
src/launcher/autoware_launch_APS/autoware_launch/config/localization/ndt_scan_matcher/: ndt_scan_matcher.param.yaml
src/launcher/autoware_launch_APS/autoware_launch/launch/: autoware.launch.xml  planning_simulator.launch.xml
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/: diagnostic_filter.py
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/APS2Autoware_interface/: CMakeLists.txt  README.md  package.xml  电机驱动.md
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/APS2Autoware_interface/config/: params.yaml
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/APS2Autoware_interface/include/: motor_controller.hpp
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/APS2Autoware_interface/launch/: motor_driver.launch.py
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/APS2Autoware_interface/src/: auto2motor.cpp  cmd_monitor.cpp  motor2auto.cpp  motor_controller.cpp  test_cmd.cpp  电机驱动.md
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/aps_sensor_kit_description/urdf/: sensor_kit.xacro
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/: readme.MD
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/: CMakeLists.txt  package.xml
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/config/: vf_back_params.yaml  vf_params.yaml
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/include/: pipeline.h  reader.h  scan2pointcloud.hpp  writer.h
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/include/communication/: tcp_transport.h  transport.h  udp_transport.h
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/include/olei/: olei_interface.h  olei_packet_reader.h  olei_parser.h  olei_writer.h
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/include/olei/olei_packet/: olei_packet.h  olei_version2.h  olei_version2_a.h  olei_vf_packet.h  olei_vf_packet_a.h  olei_vf_packet_b.h  olei_vf_packet_c.h
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/include/ros/: lidar_publish.h
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/launch/: vf.back.launch.py  vf.launch.py
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/src/: pipeline.cpp
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/src/communication/: tcp_transport.cpp  udp_transport.cpp
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/src/olei/: olei_interface.cpp  olei_packet_reader.cpp
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/src/olei/olei_packet/: olei_packet.cpp  olei_version2.cpp  olei_version2_a.cpp  olei_vf_packet.cpp  olei_vf_packet_a.cpp  olei_vf_packet_b.cpp  olei_vf_packet_c.cpp
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/src/ros/: lidar_publish.cpp  ros_main.cpp  scan2pointcloud.cpp  scan_b2pointcloud.cpp
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_driver/src/scan_filter/: scan_filter_node.cpp  scan_subscriber.cpp
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_interfaces/: CMakeLists.txt  package.xml
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ole2d_driver/src/olei_interfaces/msg/: V2Header.msg  VFHeader.msg
src/launcher/autoware_launch_APS/sensor_kit/sample_sensor_kit_launch/ros2_rslidar/src/rslidar_sdk/: CMakeLists.txt
src/launcher/autoware_launch_APS/vehicle/aps_vehicle_launch/aps_vehicle_description/config/: vehicle_info.param.yaml
src/universe/autoware_universe/control/autoware_autonomous_emergency_braking/launch/: autoware_autonomous_emergency_braking.launch.xml
src/universe/autoware_universe/control/autoware_smart_mpc_trajectory_follower/: README.md
src/universe/autoware_universe/control/autoware_smart_mpc_trajectory_follower/autoware_smart_mpc_trajectory_follower/training_and_data_check/: rosbag2.bash
src/universe/autoware_universe/launch/tier4_control_launch/launch/: control.launch.xml
src/universe/autoware_universe/launch/tier4_localization_launch/launch/pose_twist_estimator/: gyro_odometer.launch.xml
src/universe/autoware_universe/launch/tier4_simulator_launch/launch/: simulator.launch.xml
src/universe/autoware_universe/localization/autoware_pose_initializer/: README.md
src/universe/autoware_universe/localization/autoware_pose_initializer/launch/: pose_initializer.launch.xml
src/universe/autoware_universe/sensing/autoware_pointcloud_preprocessor/launch/: concatenate_and_time_sync_node.launch.xml  distortion_corrector_node.launch.xml  preprocessor.launch.py  time_synchronizer_node.launch.xml
src/universe/autoware_universe/sensing/autoware_pointcloud_preprocessor/test/: test_concatenate_node_component.py
src/universe/autoware_universe/simulator/autoware_simple_planning_simulator/launch/: simple_planning_simulator.launch.py
(+5 files in other folders)
